# brainstormer

./: README.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  worklog.md
.github/workflows/: release.yml
agent-ctx/: 2c-export-settings-tabs.md  3-b-brainstormer-widget.md  6-visual-test-polish.md
dev_notes/: VOICE_TTS_AUDIT.md
page/: index.html
prompts/: image-prompts.md  landing-page-prompt.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/brainstorm/analyze/: route.ts
src/app/api/brainstorm/chat/: route.ts
src/app/api/brainstorm/generate/: route.ts
src/app/api/brainstorm/generate-files/: route.ts
src/app/api/brainstorm/transcribe/: route.ts
src/app/api/kokoro/download/: route.ts
src/app/api/kokoro/status/: route.ts
src/app/api/kokoro/synthesize/: route.ts
src/app/api/ollama/models/: route.ts
src/components/brainstormer/: ChatPanel.tsx  ChatTab.tsx  ExportPanel.tsx  ExportTab.tsx  FloatingParticles.tsx  HistoryPanel.tsx  PromptBuilder.tsx  SettingsTab.tsx  SparkTab.tsx  VoiceRecorder.tsx  WidgetShell.tsx
src/lib/: brainstormer-fallbacks.ts  brainstormer-store.ts  tts-service.ts  use-tauri.ts
src/lib/kokoro/: engine.ts
